--- a/views/partials/dropdown-month.ejs
+++ b/views/partials/dropdown-month.ejs
@@ -3,8 +3,9 @@
             <div class="search">Search <input type="text" id="search-field"></div>
             <select class="form-select" id="months">
                 <option selected>Open this select menu</option>
-                <option value="10">October</option>
-                <option value="11">November</option>
+                <option value="all">All</option>
+                <option value="01">January</option>
+                <option value="02">February</option>
             </select>
         </div>
         
