--- a/public/style.css
+++ b/public/style.css
@@ -278,22 +278,16 @@ table {
 .container .jobs-list .jobs-content .job-table tr td a:hover {
   text-decoration: underline;
 }
-.container .jobs-list .jobs-content .job-table tr td.checks .archive-item {
-  visibility: hidden;
-}
-.container .jobs-list .jobs-content .job-table tr td.checks .archive-item.vis {
-  visibility: visible;
-}
-.container .jobs-list .jobs-content .job-table tr td.archive {
-  display: none;
-}
-.container .jobs-list .jobs-content .job-table tr td.archive.vis {
-  display: table-cell;
-}
 .container .jobs-list .jobs-content .job-table tr td.archive input[type=submit] {
   border-radius: 5px;
-  border: 1px solid #cccccc;
+  border: 0;
   padding: 8px 5px;
+  background-color: #ececec;
+  color: black;
+  cursor: pointer;
+}
+.container .jobs-list .jobs-content .job-table tr td.archive input[type=submit]:hover {
+  background-color: #9fd3c7;
 }
 .container .jobs-list .jobs-content .job-table tr td.edit {
   white-space: nowrap;
